Pieces can now have their own masses for more realistic collisions.

--- a/assets/OpenTabletop/cards/cards.cfg
+++ b/assets/OpenTabletop/cards/cards.cfg
@@ -1,5 +1,8 @@
 [*]
 
+; Standard playing cards are 1.8 g.
+mass = 1.8
+
 ; A standard poker playing card is 2.5 inches (= 6.35 cm) wide by 3.5 inches
 ; tall (= 8.89 cm)
 scale = Vector3(6.35, 1, 8.89)
