--- a/assets/OpenTabletop/chips/chips.cfg
+++ b/assets/OpenTabletop/chips/chips.cfg
@@ -1,4 +1,7 @@
 [*]
 
+; Standard poker chips are 15 g.
+mass = 15
+
 ; Standard poker chips are 40mm = 4cm in diameter.
 scale = Vector3(4, 0.2, 4)
