--- a/assets/OpenTabletop/dice/d4/d4.cfg
+++ b/assets/OpenTabletop/dice/d4/d4.cfg
@@ -1,5 +1,8 @@
 [*]
 
+; Standard D4 mass is 0.204 g.
+mass = 0.204
+
 ; The shape is defined by the unit sphere.
 ; Height = 4/3
 ; Standard D4 height = 18mm = 1.8cm
