--- a/assets/OpenTabletop/dice/d6/d6.cfg
+++ b/assets/OpenTabletop/dice/d6/d6.cfg
@@ -1,4 +1,7 @@
 [*]
 
+; Standard D6 mass is 0.306 g.
+mass = 0.306
+
 ; D6 standard length/width/height is 16mm = 1.6cm
 scale = Vector3(1.6, 1.6, 1.6)
