--- a/assets/OpenTabletop/dice/d8/d8.cfg
+++ b/assets/OpenTabletop/dice/d8/d8.cfg
@@ -1,5 +1,8 @@
 [*]
 
+; Standard D8 mass is 0.316 g.
+mass = 0.316
+
 ; The shape is defined by the unit sphere.
 ; Height = 2
 ; Standard D8 height = 23mm = 2.3cm
