--- a/assets/OpenTabletop/cards/config.cfg
+++ b/assets/OpenTabletop/cards/config.cfg
@@ -6,3 +6,7 @@ mass = 1.8
 ; A standard poker playing card is 2.5 inches (= 6.35 cm) wide by 3.5 inches
 ; tall (= 8.89 cm)
 scale = Vector3(6.35, 1, 8.89)
+
+[Template*]
+
+ignore = true
