Finished the object templates.

--- a/assets/OpenTabletop/dice/d4/config.cfg
+++ b/assets/OpenTabletop/dice/d4/config.cfg
@@ -8,3 +8,8 @@ mass = 0.204
 ; Standard D4 height = 18mm = 1.8cm
 ; Therefore, we need to scale it by 1.8 / (4/3) = 1.35
 scale = Vector3(1.35, 1.35, 1.35)
+
+[Template*]
+
+ignore = true
+
