--- a/assets/OpenTabletop/dice/d8/config.cfg
+++ b/assets/OpenTabletop/dice/d8/config.cfg
@@ -8,3 +8,8 @@ mass = 0.316
 ; Standard D8 height = 23mm = 2.3cm
 ; Therefore, we need to scale it by 2.3/2 = 1.15
 scale = Vector3(1.15, 1.15, 1.15)
+
+[Template*]
+
+ignore = true
+
