Added descriptions for every piece.
These descriptions can be customised with the config files, and
they will be displayed in the hint tooltips in the objects menu.

--- a/assets/OpenTabletop/cards/stacks.cfg
+++ b/assets/OpenTabletop/cards/stacks.cfg
@@ -1,5 +1,7 @@
 [52-Card Deck]
 
+desc = "A deck of poker-sized French-suited playing cards excluding jokers."
+
 items = [
     "Ace of Spades.png",
     "Two of Spades.png",
