--- a/assets/OpenTabletop/tokens/cylinder/stacks.cfg
+++ b/assets/OpenTabletop/tokens/cylinder/stacks.cfg
@@ -1,5 +1,7 @@
 [20 x 1 Chips]
 
+desc = "A stack of 20 1-value chips."
+
 items = [
     "1.png",
     "1.png",
@@ -24,6 +26,8 @@ items = [
 ]
 
 [20 x 5 Chips]
+
+desc = "A stack of 20 5-value chips."
 
 items = [
     "5.png",
@@ -50,6 +54,8 @@ items = [
 
 [20 x 10 Chips]
 
+desc = "A stack of 20 10-value chips."
+
 items = [
     "10.png",
     "10.png",
@@ -75,6 +81,8 @@ items = [
 
 [20 x 25 Chips]
 
+desc = "A stack of 20 25-value chips."
+
 items = [
     "25.png",
     "25.png",
@@ -99,6 +107,8 @@ items = [
 ]
 
 [20 x 100 Chips]
+
+desc = "A stack of 20 100-value chips."
 
 items = [
     "100.png",
