Updated the playing cards in the default asset pack.

--- a/assets/OpenTabletop/cards/config.cfg
+++ b/assets/OpenTabletop/cards/config.cfg
@@ -1,6 +1,8 @@
 [*]
 
-desc = "A poker-sized French-suited playing card."
+desc = "A poker-sized French-suited playing card.
+
+Card back is Copyright (c) 2014 jeffshee"
 
 ; Standard playing cards are 1.8 g.
 mass = 1.8
