Added a measuring tool.
Two extra buttons have been added to the camera controller: One for
selecting the cursor tool (the "original" functionality), and the
other is for selecting the new measuring tool.

The measuring tool will measure the distance between two points made
by the player (by left-clicking with the tool selected). The tool
will show the distance in both cm and in. However, the player cannot
move or right-click any pieces on the table while this tool is
selected.

This commit fixes #6.

--- a/assets/OpenTabletop/pieces/custom/config.cfg
+++ b/assets/OpenTabletop/pieces/custom/config.cfg
@@ -1,3 +1,16 @@
+[Bishop*]
+desc = "A Bishop Chess piece, made by rehcub."
+[King*]
+desc = "A King Chess piece, made by rehcub."
+[Knight*]
+desc = "A Knight Chess piece, made by rehcub."
+[Pawn*]
+desc = "A Pawn Chess piece, made by rehcub."
+[Queen*]
+desc = "A Queen Chess piece, made by rehcub."
+[Rook*]
+desc = "A Rook Chess piece, made by rehcub."
+
 [Chess Board.obj]
 
 desc = "An 8x8 Chess board.
