--- a/assets/OpenTabletop/pieces/custom/config.cfg
+++ b/assets/OpenTabletop/pieces/custom/config.cfg
@@ -21,6 +21,10 @@ Concrete texture is Copyright (c) 2012 Tiziana"
 mass = 900.0
 scale = Vector3(4.0, 4.0, 4.0)
 
+[ColladaSphere.dae]
+
+desc = "A test sphere exported as a Collada file using Blender."
+
 [Sphere.gltf]
 
 desc = "A sphere exported directly from Blender."
