Converted the music files from .mp3 to .ogg
This has reduced the file sizes of the music a lot because the OGG
format uses better compression than MP3, but the difference in
audio quality is pretty much non-existant (at least for me).

--- a/assets/OpenTabletop/music/config.cfg
+++ b/assets/OpenTabletop/music/config.cfg
@@ -3,62 +3,62 @@
 ; Set all of the music in this pack to play in the main menu.
 main_menu = true
 
-[Airport Lounge - Kevin MacLeod.mp3]
+[Airport Lounge - Kevin MacLeod.ogg]
 desc = "Airport Lounge by Kevin MacLeod
 Link: https://incompetech.filmmusic.io/song/3347-airport-lounge
 License: https://filmmusic.io/standard-license"
 
-[Backbay Lounge - Kevin MacLeod.mp3]
+[Backbay Lounge - Kevin MacLeod.ogg]
 desc = "Backbay Lounge by Kevin MacLeod
 Link: https://incompetech.filmmusic.io/song/3408-backbay-lounge
 License: https://filmmusic.io/standard-license"
 
-[Bossa Antigua - Kevin MacLeod.mp3]
+[Bossa Antigua - Kevin MacLeod.ogg]
 desc = "Bossa Antigua by Kevin MacLeod
 Link: https://incompetech.filmmusic.io/song/3454-bossa-antigua
 License: https://filmmusic.io/standard-license"
 
-[Deadly Roulette - Kevin MacLeod.mp3]
+[Deadly Roulette - Kevin MacLeod.ogg]
 desc = "Deadly Roulette by Kevin MacLeod
 Link: https://incompetech.filmmusic.io/song/3625-deadly-roulette
 License: https://filmmusic.io/standard-license"
 
-[George Street Shuffle - Kevin MacLeod.mp3]
+[George Street Shuffle - Kevin MacLeod.ogg]
 desc = "George Street Shuffle by Kevin MacLeod
 Link: https://incompetech.filmmusic.io/song/3800-george-street-shuffle
 License: https://filmmusic.io/standard-license"
 
-[Hard Boiled - Kevin MacLeod.mp3]
+[Hard Boiled - Kevin MacLeod.ogg]
 desc = "Hard Boiled by Kevin MacLeod
 Link: https://incompetech.filmmusic.io/song/3857-hard-boiled
 License: https://filmmusic.io/standard-license"
 
-[In Your Arms - Kevin MacLeod.mp3]
+[In Your Arms - Kevin MacLeod.ogg]
 desc = "In Your Arms by Kevin MacLeod
 Link: https://incompetech.filmmusic.io/song/3906-in-your-arms
 License: https://filmmusic.io/standard-license"
 
-[Lobby Time - Kevin MacLeod.mp3]
+[Lobby Time - Kevin MacLeod.ogg]
 desc = "Lobby Time by Kevin MacLeod
 Link: https://incompetech.filmmusic.io/song/3986-lobby-time
 License: https://filmmusic.io/standard-license"
 
-[Night on the Docks - Sax - Kevin MacLeod.mp3]
+[Night on the Docks - Sax - Kevin MacLeod.ogg]
 desc = "Night on the Docks - Sax by Kevin MacLeod
 Link: https://incompetech.filmmusic.io/song/4129-night-on-the-docks---sax
 License: https://filmmusic.io/standard-license"
 
-[Shades of Spring - Kevin MacLeod.mp3]
+[Shades of Spring - Kevin MacLeod.ogg]
 desc = "Shades of Spring by Kevin MacLeod
 Link: https://incompetech.filmmusic.io/song/4342-shades-of-spring
 License: https://filmmusic.io/standard-license"
 
-[Smooth Lovin - Kevin MacLeod.mp3]
+[Smooth Lovin - Kevin MacLeod.ogg]
 desc = "Smooth Lovin by Kevin MacLeod
 Link: https://incompetech.filmmusic.io/song/4379-smooth-lovin
 License: https://filmmusic.io/standard-license"
 
-[Spy Glass - Kevin MacLeod.mp3]
+[Spy Glass - Kevin MacLeod.ogg]
 desc = "Spy Glass by Kevin MacLeod
 Link: https://incompetech.filmmusic.io/song/4410-spy-glass
 License: https://filmmusic.io/standard-license"
