Added more skyboxes.

--- a/assets/OpenTabletop/skyboxes/config.cfg
+++ b/assets/OpenTabletop/skyboxes/config.cfg
@@ -1,3 +1,11 @@
-[Clouds.png]
-
+[Clouds.jpg]
 desc = "Copyright (c) 2012 Pieter 'Spiney' Verhoeven"
+
+[Nebula.jpg]
+desc = "Copyright (c) 2015 NoLogoGames"
+
+[Space.jpg]
+desc = "Made by kurtk84."
+
+[*]
+desc = "Copyright (c) 2013 Emil 'Humus' Persson"
