Cards now have two separate surfaces for each face.
This stops the back face having to be repeated across every card
texture, if the back face is the same for every card.

The back texture can be set via the cards/config.cfg file.

This commit fixes #39.

--- a/assets/OpenTabletop/cards/config.cfg
+++ b/assets/OpenTabletop/cards/config.cfg
@@ -11,6 +11,12 @@ mass = 1.8
 ; tall (= 8.89 cm)
 scale = Vector3(6.35, 1, 8.89)
 
+back_face = "Back.png"
+
+[Back.png]
+
+ignore = true
+
 [Template*]
 
 ignore = true
