Can now configure the hand positions for custom tables.

--- a/assets/OpenTabletop/tables/config.cfg
+++ b/assets/OpenTabletop/tables/config.cfg
@@ -1,3 +1,16 @@
 [Table.gltf]
 bounce = 0.5
 default = true
+
+hands = [
+    { "pos": Vector3(0, 8, 50), "dir": 0 },
+    { "pos": Vector3(0, 8, -50), "dir": 180 },
+    { "pos": Vector3(-40, 8, 50), "dir": 0 },
+    { "pos": Vector3(-40, 8, -50), "dir": 180 },
+    { "pos": Vector3(40, 8, 50), "dir": 0 },
+    { "pos": Vector3(40, 8, -50), "dir": 180 },
+    { "pos": Vector3(80, 8, -28), "dir": 90 },
+    { "pos": Vector3(80, 8, 28), "dir": 90 },
+    { "pos": Vector3(-80, 8, -28), "dir": -90 },
+    { "pos": Vector3(-80, 8, 28), "dir": -90 }
+]
