--- a/assets/OpenTabletop/cards/stacks.cfg
+++ b/assets/OpenTabletop/cards/stacks.cfg
@@ -3,56 +3,56 @@
 desc = "A deck of poker-sized French-suited playing cards excluding jokers."
 
 items = [
-    "Ace of Spades.png",
-    "Two of Spades.png",
-    "Three of Spades.png",
-    "Four of Spades.png",
-    "Five of Spades.png",
-    "Six of Spades.png",
-    "Seven of Spades.png",
-    "Eight of Spades.png",
-    "Nine of Spades.png",
-    "Ten of Spades.png",
-    "Jack of Spades.png",
-    "Queen of Spades.png",
-    "King of Spades.png",
-    "Ace of Hearts.png",
-    "Two of Hearts.png",
-    "Three of Hearts.png",
-    "Four of Hearts.png",
-    "Five of Hearts.png",
-    "Six of Hearts.png",
-    "Seven of Hearts.png",
-    "Eight of Hearts.png",
-    "Nine of Hearts.png",
-    "Ten of Hearts.png",
-    "Jack of Hearts.png",
-    "Queen of Hearts.png",
-    "King of Hearts.png",
-    "Ace of Diamonds.png",
-    "Two of Diamonds.png",
-    "Three of Diamonds.png",
-    "Four of Diamonds.png",
-    "Five of Diamonds.png",
-    "Six of Diamonds.png",
-    "Seven of Diamonds.png",
-    "Eight of Diamonds.png",
-    "Nine of Diamonds.png",
-    "Ten of Diamonds.png",
-    "Jack of Diamonds.png",
-    "Queen of Diamonds.png",
-    "King of Diamonds.png",
-    "Ace of Clubs.png",
-    "Two of Clubs.png",
-    "Three of Clubs.png",
-    "Four of Clubs.png",
-    "Five of Clubs.png",
-    "Six of Clubs.png",
-    "Seven of Clubs.png",
-    "Eight of Clubs.png",
-    "Nine of Clubs.png",
-    "Ten of Clubs.png",
-    "Jack of Clubs.png",
-    "Queen of Clubs.png",
-    "King of Clubs.png"
+    "Ace of Spades",
+    "Two of Spades",
+    "Three of Spades",
+    "Four of Spades",
+    "Five of Spades",
+    "Six of Spades",
+    "Seven of Spades",
+    "Eight of Spades",
+    "Nine of Spades",
+    "Ten of Spades",
+    "Jack of Spades",
+    "Queen of Spades",
+    "King of Spades",
+    "Ace of Hearts",
+    "Two of Hearts",
+    "Three of Hearts",
+    "Four of Hearts",
+    "Five of Hearts",
+    "Six of Hearts",
+    "Seven of Hearts",
+    "Eight of Hearts",
+    "Nine of Hearts",
+    "Ten of Hearts",
+    "Jack of Hearts",
+    "Queen of Hearts",
+    "King of Hearts",
+    "Ace of Diamonds",
+    "Two of Diamonds",
+    "Three of Diamonds",
+    "Four of Diamonds",
+    "Five of Diamonds",
+    "Six of Diamonds",
+    "Seven of Diamonds",
+    "Eight of Diamonds",
+    "Nine of Diamonds",
+    "Ten of Diamonds",
+    "Jack of Diamonds",
+    "Queen of Diamonds",
+    "King of Diamonds",
+    "Ace of Clubs",
+    "Two of Clubs",
+    "Three of Clubs",
+    "Four of Clubs",
+    "Five of Clubs",
+    "Six of Clubs",
+    "Seven of Clubs",
+    "Eight of Clubs",
+    "Nine of Clubs",
+    "Ten of Clubs",
+    "Jack of Clubs",
+    "Queen of Clubs",
+    "King of Clubs"
 ]
