Added a picnic bench to the default asset pack.
Thank you, Sebastian! :)

--- a/assets/OpenTabletop/tables/config.cfg
+++ b/assets/OpenTabletop/tables/config.cfg
@@ -16,3 +16,19 @@ hands = [
 ]
 
 paint_plane = Vector2(152.4, 91.4)
+
+[Picnic Bench.obj]
+desc = "Made by Sebastian Milovsorov."
+
+hands = [
+    { "pos": Vector3(0, 3, 40), "dir": 0 },
+    { "pos": Vector3(0, 3, -40), "dir": 180 },
+    { "pos": Vector3(-40, 3, 40), "dir": 0 },
+    { "pos": Vector3(-40, 3, -40), "dir": 180 },
+    { "pos": Vector3(40, 3, 40), "dir": 0 },
+    { "pos": Vector3(40, 3, -40), "dir": 180 },
+    { "pos": Vector3(75, 3, 0), "dir": 90 },
+    { "pos": Vector3(-75, 3, 0), "dir": -90 }
+]
+
+paint_plane = Vector2(147.0, 75.0)
