Can now configure objects to appear in the falling world.

--- a/assets/TabletopClub/dice/d4/config.cfg
+++ b/assets/TabletopClub/dice/d4/config.cfg
@@ -11,6 +11,8 @@ mass = 0.204
 ; Therefore, we need to scale it by 1.8 / (4/3) = 1.35
 scale = Vector3(1.35, 1.35, 1.35)
 
+main_menu = true
+
 [Template*]
 
 ignore = true
