--- a/assets/TabletopClub/pieces/custom/config.cfg
+++ b/assets/TabletopClub/pieces/custom/config.cfg
@@ -21,6 +21,7 @@ Concrete texture is Copyright (c) 2012 Tiziana"
 mass = 900.0
 scale = Vector3(4.0, 4.0, 4.0)
 sfx = "wood_heavy"
+main_menu = false
 
 [ColladaSphere.dae]
 
@@ -30,3 +31,7 @@ desc = "A test sphere exported as a Collada file using Blender."
 
 desc = "A sphere exported directly from Blender."
 mass = 100
+
+[*]
+
+main_menu = true
