--- a/assets/TabletopClub/dice/d6/config.cfg
+++ b/assets/TabletopClub/dice/d6/config.cfg
@@ -8,6 +8,8 @@ mass = 0.306
 ; D6 standard length/width/height is 16mm = 1.6cm
 scale = Vector3(1.6, 1.6, 1.6)
 
+main_menu = true
+
 [Template*]
 
 ignore = true
