--- a/assets/TabletopClub/dice/d8/config.cfg
+++ b/assets/TabletopClub/dice/d8/config.cfg
@@ -11,6 +11,8 @@ mass = 0.316
 ; Therefore, we need to scale it by 2.3/2 = 1.15
 scale = Vector3(1.15, 1.15, 1.15)
 
+main_menu = true
+
 [Template*]
 
 ignore = true
