Added many colour variations of the dice.

--- a/assets/TabletopClub/dice/d10/config.cfg
+++ b/assets/TabletopClub/dice/d10/config.cfg
@@ -6,3 +6,75 @@ desc = "A 10-sided die."
 mass = 0.35
 
 main_menu = true
+
+[d10 (Red)]
+parent = "d10 (White)"
+color = "#ff3838"
+
+[d10 (Orange)]
+parent = "d10 (White)"
+color = "#ff9300"
+
+[d10 (Yellow)]
+parent = "d10 (White)"
+color = "#f0f125"
+
+[d10 (Green)]
+parent = "d10 (White)"
+color = "#1bf81a"
+
+[d10 (Cyan)]
+parent = "d10 (White)"
+color = "#27f8eb"
+
+[d10 (Blue)]
+parent = "d10 (White)"
+color = "#3e38ff"
+
+[d10 (Purple)]
+parent = "d10 (White)"
+color = "#8a5bff"
+
+[d10 (Pink)]
+parent = "d10 (White)"
+color = "#eb56f3"
+
+[d10 (Brown)]
+parent = "d10 (White)"
+color = "#a66200"
+
+[d10 (Percent) (Red)]
+parent = "d10 (Percent) (White)"
+color = "#ff3838"
+
+[d10 (Percent) (Orange)]
+parent = "d10 (Percent) (White)"
+color = "#ff9300"
+
+[d10 (Percent) (Yellow)]
+parent = "d10 (Percent) (White)"
+color = "#f0f125"
+
+[d10 (Percent) (Green)]
+parent = "d10 (Percent) (White)"
+color = "#1bf81a"
+
+[d10 (Percent) (Cyan)]
+parent = "d10 (Percent) (White)"
+color = "#27f8eb"
+
+[d10 (Percent) (Blue)]
+parent = "d10 (Percent) (White)"
+color = "#3e38ff"
+
+[d10 (Percent) (Purple)]
+parent = "d10 (Percent) (White)"
+color = "#8a5bff"
+
+[d10 (Percent) (Pink)]
+parent = "d10 (Percent) (White)"
+color = "#eb56f3"
+
+[d10 (Percent) (Brown)]
+parent = "d10 (Percent) (White)"
+color = "#a66200"
