--- a/assets/TabletopClub/dice/d12/config.cfg
+++ b/assets/TabletopClub/dice/d12/config.cfg
@@ -6,3 +6,39 @@ desc = "A 12-sided die."
 mass = 0.4
 
 main_menu = true
+
+[d12 (Red)]
+parent = "d12 (White)"
+color = "#ff3838"
+
+[d12 (Orange)]
+parent = "d12 (White)"
+color = "#ff9300"
+
+[d12 (Yellow)]
+parent = "d12 (White)"
+color = "#f0f125"
+
+[d12 (Green)]
+parent = "d12 (White)"
+color = "#1bf81a"
+
+[d12 (Cyan)]
+parent = "d12 (White)"
+color = "#27f8eb"
+
+[d12 (Blue)]
+parent = "d12 (White)"
+color = "#3e38ff"
+
+[d12 (Purple)]
+parent = "d12 (White)"
+color = "#8a5bff"
+
+[d12 (Pink)]
+parent = "d12 (White)"
+color = "#eb56f3"
+
+[d12 (Brown)]
+parent = "d12 (White)"
+color = "#a66200"
