--- a/assets/TabletopClub/dice/d20/config.cfg
+++ b/assets/TabletopClub/dice/d20/config.cfg
@@ -6,3 +6,39 @@ desc = "A 20-sided die."
 mass = 0.5
 
 main_menu = true
+
+[d20 (Red)]
+parent = "d20 (White)"
+color = "#ff3838"
+
+[d20 (Orange)]
+parent = "d20 (White)"
+color = "#ff9300"
+
+[d20 (Yellow)]
+parent = "d20 (White)"
+color = "#f0f125"
+
+[d20 (Green)]
+parent = "d20 (White)"
+color = "#1bf81a"
+
+[d20 (Cyan)]
+parent = "d20 (White)"
+color = "#27f8eb"
+
+[d20 (Blue)]
+parent = "d20 (White)"
+color = "#3e38ff"
+
+[d20 (Purple)]
+parent = "d20 (White)"
+color = "#8a5bff"
+
+[d20 (Pink)]
+parent = "d20 (White)"
+color = "#eb56f3"
+
+[d20 (Brown)]
+parent = "d20 (White)"
+color = "#a66200"
