--- a/assets/TabletopClub/dice/d4/config.cfg
+++ b/assets/TabletopClub/dice/d4/config.cfg
@@ -6,3 +6,39 @@ desc = "A 4-sided die."
 mass = 0.204
 
 main_menu = true
+
+[d4 (Red)]
+parent = "d4 (White)"
+color = "#ff3838"
+
+[d4 (Orange)]
+parent = "d4 (White)"
+color = "#ff9300"
+
+[d4 (Yellow)]
+parent = "d4 (White)"
+color = "#f0f125"
+
+[d4 (Green)]
+parent = "d4 (White)"
+color = "#1bf81a"
+
+[d4 (Cyan)]
+parent = "d4 (White)"
+color = "#27f8eb"
+
+[d4 (Blue)]
+parent = "d4 (White)"
+color = "#3e38ff"
+
+[d4 (Purple)]
+parent = "d4 (White)"
+color = "#8a5bff"
+
+[d4 (Pink)]
+parent = "d4 (White)"
+color = "#eb56f3"
+
+[d4 (Brown)]
+parent = "d4 (White)"
+color = "#a66200"
