--- a/assets/TabletopClub/dice/d6/config.cfg
+++ b/assets/TabletopClub/dice/d6/config.cfg
@@ -6,3 +6,39 @@ desc = "A 6-sided die."
 mass = 0.306
 
 main_menu = true
+
+[d6 (Red)]
+parent = "d6 (White)"
+color = "#ff3838"
+
+[d6 (Orange)]
+parent = "d6 (White)"
+color = "#ff9300"
+
+[d6 (Yellow)]
+parent = "d6 (White)"
+color = "#f0f125"
+
+[d6 (Green)]
+parent = "d6 (White)"
+color = "#1bf81a"
+
+[d6 (Cyan)]
+parent = "d6 (White)"
+color = "#27f8eb"
+
+[d6 (Blue)]
+parent = "d6 (White)"
+color = "#3e38ff"
+
+[d6 (Purple)]
+parent = "d6 (White)"
+color = "#8a5bff"
+
+[d6 (Pink)]
+parent = "d6 (White)"
+color = "#eb56f3"
+
+[d6 (Brown)]
+parent = "d6 (White)"
+color = "#a66200"
