--- a/assets/TabletopClub/dice/d8/config.cfg
+++ b/assets/TabletopClub/dice/d8/config.cfg
@@ -6,3 +6,39 @@ desc = "An 8-sided die."
 mass = 0.316
 
 main_menu = true
+
+[d8 (Red)]
+parent = "d8 (White)"
+color = "#ff3838"
+
+[d8 (Orange)]
+parent = "d8 (White)"
+color = "#ff9300"
+
+[d8 (Yellow)]
+parent = "d8 (White)"
+color = "#f0f125"
+
+[d8 (Green)]
+parent = "d8 (White)"
+color = "#1bf81a"
+
+[d8 (Cyan)]
+parent = "d8 (White)"
+color = "#27f8eb"
+
+[d8 (Blue)]
+parent = "d8 (White)"
+color = "#3e38ff"
+
+[d8 (Purple)]
+parent = "d8 (White)"
+color = "#8a5bff"
+
+[d8 (Pink)]
+parent = "d8 (White)"
+color = "#eb56f3"
+
+[d8 (Brown)]
+parent = "d8 (White)"
+color = "#a66200"
