--- a/assets/TabletopClub/containers/config.cfg
+++ b/assets/TabletopClub/containers/config.cfg
@@ -5,3 +5,9 @@ scale = Vector3(6.5, 6.5, 6.5)
 sfx = "soft"
 shakable = true
 main_menu = true
+
+[Red Cup.gltf]
+mass = 5.0
+sfx = "generic"
+shakable = true
+main_menu = true
