Can now see the total of thrown dice in the context menu.
This is achieved by configuring a property of the dice called
`face_values`, the format of which is described in the docs.

This commit fixes #76.

--- a/assets/TabletopClub/dice/d10/config.cfg
+++ b/assets/TabletopClub/dice/d10/config.cfg
@@ -7,6 +7,34 @@ mass = 0.35
 
 main_menu = true
 
+face_values = {
+    0: Vector2(0.0, 20.0),
+    1: Vector2(48.0, 170.0),
+    2: Vector2(-28.0, -77.0),
+    3: Vector2(-28.0, 103.0),
+    4: Vector2(48.0, -10.0),
+    5: Vector2(-48.0, 170.0),
+    6: Vector2(28.0, -77.0),
+    7: Vector2(28.0, 103.0),
+    8: Vector2(-48.0, -10.0),
+    9: Vector2(0.0, -160.0)
+}
+
+[d10 (Percent)*]
+
+face_values = {
+    0: Vector2(0.0, 20.0),
+    10: Vector2(-28.0, 103.0),
+    20: Vector2(48.0, -10.0),
+    30: Vector2(48.0, 170.0),
+    40: Vector2(-28.0, -77.0),
+    50: Vector2(28.0, 103.0),
+    60: Vector2(-48.0, -10.0),
+    70: Vector2(-48.0, 170.0),
+    80: Vector2(28.0, -77.0),
+    90: Vector2(0.0, -160.0)
+}
+
 [d10 (Red)]
 parent = "d10 (White)"
 color = "#ff3838"
