--- a/assets/TabletopClub/dice/d12/config.cfg
+++ b/assets/TabletopClub/dice/d12/config.cfg
@@ -7,6 +7,21 @@ mass = 0.4
 
 main_menu = true
 
+face_values = {
+    1: Vector2(0.0, -148.0),
+    2: Vector2(0.0, 148.0),
+    3: Vector2(-58.0, 180.0),
+    4: Vector2(58.0, 180.0),
+    5: Vector2(-32.0, -90.0),
+    6: Vector2(32.0, -90.0),
+    7: Vector2(-32.0, 90.0),
+    8: Vector2(32.0, 90.0),
+    9: Vector2(-58.0, 0.0),
+    10: Vector2(58.0, 0.0),
+    11: Vector2(0.0, -32.0),
+    12: Vector2(0.0, 32.0)
+}
+
 [d12 (Red)]
 parent = "d12 (White)"
 color = "#ff3838"
