--- a/assets/TabletopClub/dice/d6/config.cfg
+++ b/assets/TabletopClub/dice/d6/config.cfg
@@ -7,6 +7,26 @@ mass = 0.306
 
 main_menu = true
 
+face_values = {
+    1: Vector2(0.0, 0.0),
+    2: Vector2(0.0, 90.0),
+    3: Vector2(-90.0, 0.0),
+    4: Vector2(90.0, 0.0),
+    5: Vector2(0.0, -90.0),
+    6: Vector2(180.0, 0.0)
+}
+
+[d6 (Traditional).gltf]
+
+face_values = {
+    1: Vector2(0.0, -90.0),
+    2: Vector2(90.0, 0.0),
+    3: Vector2(180.0, 0.0),
+    4: Vector2(0.0, 0.0),
+    5: Vector2(-90.0, 0.0),
+    6: Vector2(0.0, 90.0)
+}
+
 [d6 (Red)]
 parent = "d6 (White)"
 color = "#ff3838"
