--- a/assets/TabletopClub/dice/d8/config.cfg
+++ b/assets/TabletopClub/dice/d8/config.cfg
@@ -7,6 +7,17 @@ mass = 0.316
 
 main_menu = true
 
+face_values = {
+    1: Vector2(-35.0, 45.0),
+    2: Vector2(35.0, -135.0),
+    3: Vector2(35.0, 135.0),
+    4: Vector2(-35.0, -45.0),
+    5: Vector2(35.0, -45.0),
+    6: Vector2(-35.0, 135.0),
+    7: Vector2(-35.0, -135.0),
+    8: Vector2(35.0, 45.0)
+}
+
 [d8 (Red)]
 parent = "d8 (White)"
 color = "#ff3838"
