--- a/assets/TabletopClub/dice/d20/config.cfg
+++ b/assets/TabletopClub/dice/d20/config.cfg
@@ -7,6 +7,29 @@ mass = 0.5
 
 main_menu = true
 
+face_values = {
+    1: Vector2(0.0, 69.0),
+    2: Vector2(-35.0, -135.0),
+    3: Vector2(21.0, 0.0),
+    4: Vector2(21.0, 180.0),
+    5: Vector2(-35.0, 135.0),
+    6: Vector2(69.0, -90.0),
+    7: Vector2(-35.0, 45.0),
+    8: Vector2(0.0, -69.0),
+    9: Vector2(69.0, 90.0),
+    10: Vector2(-35.0, -45.0),
+    11: Vector2(35.0, 135.0),
+    12: Vector2(-69.0, -90.0),
+    13: Vector2(0.0, 111.0),
+    14: Vector2(35.0, -135.0),
+    15: Vector2(-69.0, 90.0),
+    16: Vector2(35.0, -45.0),
+    17: Vector2(-21.0, 0.0),
+    18: Vector2(-21.0, 180.0),
+    19: Vector2(35.0, 45.0),
+    20: Vector2(0.0, -111.0)
+}
+
 [d20 (Red)]
 parent = "d20 (White)"
 color = "#ff3838"
