--- a/assets/TabletopClub/dice/d4/config.cfg
+++ b/assets/TabletopClub/dice/d4/config.cfg
@@ -7,6 +7,13 @@ mass = 0.204
 
 main_menu = true
 
+face_values = {
+    1: Vector2(0.0, 0.0),
+    2: Vector2(55.0, -125.0),
+    3: Vector2(0.0, 109.0),
+    4: Vector2(-55.0, -125.0)
+}
+
 [d4 (Red)]
 parent = "d4 (White)"
 color = "#ff3838"
