Added author, license, modified_by, and url properties.
This allows the listed properties of an asset to be shown in-game
below the description, instead of players having to dig into the
assets directory to find the LICENSES file.

--- a/assets/TabletopClub/cards/config.cfg
+++ b/assets/TabletopClub/cards/config.cfg
@@ -1,8 +1,11 @@
 [*]
 
-desc = "A poker-sized French-suited playing card.
-
-Card back is Copyright (c) 2014 jeffshee"
+desc = "A poker-sized French-suited playing card."
+author = "Front: Unknown, Back: jeffshee"
+license = "Front: CC0, Back: CC-BY 3.0"
+modified_by = "Front: Benjamin 'drwhut' Beddows, Back: None"
+url = "Front: https://opengameart.org/content/playing-cards-vector-png
+Back: https://opengameart.org/content/colorful-poker-card-back"
 
 ; Standard playing cards are 1.8 g.
 mass = 1.8
