--- a/assets/TabletopClub/containers/config.cfg
+++ b/assets/TabletopClub/containers/config.cfg
@@ -1,5 +1,10 @@
 [Purse.gltf]
 
+author = "yd"
+license = "CC0"
+modified_by = "Benjamin 'drwhut' Beddows"
+url = "https://opengameart.org/content/bag-of-coins"
+
 mass = 10.0
 scale = Vector3(6.5, 6.5, 6.5)
 sfx = "soft"
@@ -7,6 +12,11 @@ shakable = true
 main_menu = true
 
 [Red Cup.gltf]
+
+author = "Marcel 'plaggy' Plagmann"
+license = "CC0"
+url = "https://opengameart.org/content/red-cup"
+
 mass = 5.0
 sfx = "generic"
 shakable = true
