--- a/assets/TabletopClub/dice/d10/config.cfg
+++ b/assets/TabletopClub/dice/d10/config.cfg
@@ -2,6 +2,10 @@
 
 desc = "A 10-sided die."
 
+author = "facehunter2003"
+license = "CC0"
+url = "https://opengameart.org/content/low-poly-3d-dice"
+
 ; Standard D10 mass is 0.35 g.
 mass = 0.35
 
@@ -34,6 +38,12 @@ face_values = {
     80: Vector2(28.0, -77.0),
     90: Vector2(0.0, -160.0)
 }
+
+[d10 (White).gltf]
+modified_by = "Benjamin 'drwhut' Beddows"
+
+[d10 (Percent) (White).gltf]
+modified_by = "Benjamin 'drwhut' Beddows"
 
 [d10 (Red)]
 parent = "d10 (White)"
