--- a/assets/TabletopClub/dice/d20/config.cfg
+++ b/assets/TabletopClub/dice/d20/config.cfg
@@ -2,6 +2,10 @@
 
 desc = "A 20-sided die."
 
+author = "facehunter2003"
+license = "CC0"
+url = "https://opengameart.org/content/low-poly-3d-dice"
+
 ; Standard D20 mass is 0.5 g.
 mass = 0.5
 
@@ -29,6 +33,9 @@ face_values = {
     19: Vector2(35.0, 45.0),
     20: Vector2(0.0, -111.0)
 }
+
+[d20 (White).gltf]
+modified_by = "Benjamin 'drwhut' Beddows"
 
 [d20 (Red)]
 parent = "d20 (White)"
