--- a/assets/TabletopClub/dice/d4/config.cfg
+++ b/assets/TabletopClub/dice/d4/config.cfg
@@ -2,6 +2,10 @@
 
 desc = "A 4-sided die."
 
+author = "facehunter2003"
+license = "CC0"
+url = "https://opengameart.org/content/low-poly-3d-dice"
+
 ; Standard D4 mass is 0.204 g.
 mass = 0.204
 
@@ -13,6 +17,9 @@ face_values = {
     3: Vector2(0.0, 109.0),
     4: Vector2(-55.0, -125.0)
 }
+
+[d4 (White).gltf]
+modified_by = "Benjamin 'drwhut' Beddows"
 
 [d4 (Red)]
 parent = "d4 (White)"
