--- a/assets/TabletopClub/dice/d6/config.cfg
+++ b/assets/TabletopClub/dice/d6/config.cfg
@@ -2,6 +2,10 @@
 
 desc = "A 6-sided die."
 
+author = "facehunter2003"
+license = "CC0"
+url = "https://opengameart.org/content/low-poly-3d-dice"
+
 ; Standard D6 mass is 0.306 g.
 mass = 0.306
 
@@ -17,6 +21,9 @@ face_values = {
 }
 
 [d6 (Traditional).gltf]
+author = "Arthur @ opengameart.org"
+license = "CC-BY-SA 3.0"
+url = "https://opengameart.org/content/dice-0"
 
 face_values = {
     1: Vector2(0.0, -90.0),
@@ -26,6 +33,9 @@ face_values = {
     5: Vector2(-90.0, 0.0),
     6: Vector2(0.0, 90.0)
 }
+
+[d6 (White).gltf]
+modified_by = "Benjamin 'drwhut' Beddows"
 
 [d6 (Red)]
 parent = "d6 (White)"
