--- a/assets/TabletopClub/dice/d8/config.cfg
+++ b/assets/TabletopClub/dice/d8/config.cfg
@@ -2,6 +2,10 @@
 
 desc = "An 8-sided die."
 
+author = "facehunter2003"
+license = "CC0"
+url = "https://opengameart.org/content/low-poly-3d-dice"
+
 ; Standard D8 mass is 0.316 g.
 mass = 0.316
 
@@ -17,6 +21,9 @@ face_values = {
     7: Vector2(-35.0, -135.0),
     8: Vector2(35.0, 45.0)
 }
+
+[d8 (White).gltf]
+modified_by = "Benjamin 'drwhut' Beddows"
 
 [d8 (Red)]
 parent = "d8 (White)"
