--- a/assets/TabletopClub/pieces/config.cfg
+++ b/assets/TabletopClub/pieces/config.cfg
@@ -1,22 +1,35 @@
 [Bishop*]
-desc = "A Bishop Chess piece, made by rehcub."
+author = "rehcub"
+license = "CC0"
+url = "https://opengameart.org/content/chess-set-1"
 [King*]
-desc = "A King Chess piece, made by rehcub."
+author = "rehcub"
+license = "CC0"
+url = "https://opengameart.org/content/chess-set-1"
 [Knight*]
-desc = "A Knight Chess piece, made by rehcub."
+author = "rehcub"
+license = "CC0"
+url = "https://opengameart.org/content/chess-set-1"
 [Pawn*]
-desc = "A Pawn Chess piece, made by rehcub."
+author = "rehcub"
+license = "CC0"
+url = "https://opengameart.org/content/chess-set-1"
 [Queen*]
-desc = "A Queen Chess piece, made by rehcub."
+author = "rehcub"
+license = "CC0"
+url = "https://opengameart.org/content/chess-set-1"
 [Rook*]
-desc = "A Rook Chess piece, made by rehcub."
+author = "rehcub"
+license = "CC0"
+url = "https://opengameart.org/content/chess-set-1"
 
 [Chess Board.obj]
 
-desc = "An 8x8 Chess board.
+desc = "An 8x8 Chess board."
 
-Chess board is Copyright (c) 2013 Thane \"pennomi\" Brimhall
-Concrete texture is Copyright (c) 2012 Tiziana"
+author = "Thane 'pennomi' Brimhall, Tiziana"
+license = "CC-BY 3.0"
+url = "https://opengameart.org/content/chess-board"
 
 mass = 900.0
 scale = Vector3(4.0, 4.0, 4.0)
