--- a/assets/TabletopClub/sounds/config.cfg
+++ b/assets/TabletopClub/sounds/config.cfg
@@ -1,2 +1,6 @@
 [Alarm.wav]
-desc = "An alarm for alarming situations, by Frenchyboy."
+desc = "An alarm for alarming situations."
+
+author = "Frenchyboy"
+license = "CC0"
+url = "https://opengameart.org/content/alarm-2"
