--- a/assets/TabletopClub/tables/config.cfg
+++ b/assets/TabletopClub/tables/config.cfg
@@ -18,7 +18,8 @@ hands = [
 paint_plane = Vector2(152.4, 91.4)
 
 [Picnic Bench.obj]
-desc = "Made by Sebastian Milovsorov."
+author = "Sebastian Milovsorov"
+license = "CC0"
 
 hands = [
     { "pos": Vector3(0, 3, 40), "dir": 0 },
