--- a/assets/TabletopClub/dice/d12/config.cfg
+++ b/assets/TabletopClub/dice/d12/config.cfg
@@ -2,6 +2,10 @@
 
 desc = "A 12-sided die."
 
+author = "facehunter2003"
+license = "CC0"
+url = "https://opengameart.org/content/low-poly-3d-dice"
+
 ; Standard D12 mass is 0.4 g.
 mass = 0.4
 
@@ -21,6 +25,9 @@ face_values = {
     11: Vector2(0.0, -32.0),
     12: Vector2(0.0, 32.0)
 }
+
+[d12 (White).gltf]
+modified_by = "Benjamin 'drwhut' Beddows"
 
 [d12 (Red)]
 parent = "d12 (White)"
