--- a/assets/TabletopClub/skyboxes/config.cfg
+++ b/assets/TabletopClub/skyboxes/config.cfg
@@ -1,17 +1,50 @@
 [Clouds.jpg]
-desc = "Copyright (c) 2012 Pieter 'Spiney' Verhoeven"
+author = "Pieter 'Spiney' Verhoeven"
+license = "CC-BY 3.0"
+url = "https://opengameart.org/content/cloudy-skyboxes"
 
 [Nebula.jpg]
-desc = "Copyright (c) 2015 NoLogoGames"
+author = "NoLogoGames"
+license = "CC-BY-SA 3.0"
+url = "https://opengameart.org/content/space-nebulas-skybox"
 
 [Space.jpg]
-desc = "Made by kurtk84."
+author = "kurtk84"
+license = "CC0"
+url = "https://opengameart.org/content/space-skybox-1"
 
 [*]
-desc = "Copyright (c) 2013 Emil 'Humus' Persson"
+author = "Emil 'Humus' Persson"
+license = "CC-BY 3.0"
 
-[Park.jpg]
-default = true
+[Dallas West.jpg]
+url = "https://opengameart.org/content/indoors-skyboxes"
+[Marriott Madison West.jpg]
+url = "https://opengameart.org/content/indoors-skyboxes"
+[Vasa.jpg]
+url = "https://opengameart.org/content/indoors-skyboxes"
 
+[Forest.jpg]
+url = "https://opengameart.org/content/winter-skyboxes"
+[Ice River.jpg]
+url = "https://opengameart.org/content/winter-skyboxes"
 [Park Winter.jpg]
+url = "https://opengameart.org/content/winter-skyboxes"
 default = true
+
+[Hornstulls Strand.jpg]
+url = "https://opengameart.org/content/night-skyboxes"
+
+[Maskonaive.jpg]
+url = "https://opengameart.org/content/mountain-skyboxes"
+
+[Niagra Falls.jpg]
+url = "https://opengameart.org/content/park-skyboxes"
+[Park.jpg]
+url = "https://opengameart.org/content/park-skyboxes"
+default = true
+[Path.jpg]
+url = "https://opengameart.org/content/park-skyboxes"
+[Tantolunden.jpg]
+url = "https://opengameart.org/content/park-skyboxes"
+
