Added suit and value properties to stackable objects.
If all objects in a stack have either a suit or value defined, then
the context menu will have an extra option to sort the stack by that
key.

This commit fixes #14.

--- a/assets/TabletopClub/tokens/cylinder/config.cfg
+++ b/assets/TabletopClub/tokens/cylinder/config.cfg
@@ -9,3 +9,22 @@ mass = 15
 scale = Vector3(4, 0.2, 4)
 
 main_menu = true
+
+; Assign values to the cards so the player can sort them.
+[1.png]
+value = 1
+
+[5.png]
+value = 5
+
+[10.png]
+value = 10
+
+[25.png]
+value = 25
+
+[100.png]
+value = 100
+
+[D.png]
+value = 0
