--- a/assets/TabletopClub/cards/config.cfg
+++ b/assets/TabletopClub/cards/config.cfg
@@ -25,3 +25,177 @@ ignore = true
 [Template*]
 
 ignore = true
+
+; Assign values to the cards so the player can sort them.
+[Ace of Clubs.png]
+value = 1
+suit = "C"
+[Ace of Diamonds.png]
+value = 1
+suit = "D"
+[Ace of Hearts.png]
+value = 1
+suit = "H"
+[Ace of Spades.png]
+value = 1
+suit = "S"
+
+[Two of Clubs.png]
+value = 2
+suit = "C"
+[Two of Diamonds.png]
+value = 2
+suit = "D"
+[Two of Hearts.png]
+value = 2
+suit = "H"
+[Two of Spades.png]
+value = 2
+suit = "S"
+
+[Three of Clubs.png]
+value = 3
+suit = "C"
+[Three of Diamonds.png]
+value = 3
+suit = "D"
+[Three of Hearts.png]
+value = 3
+suit = "H"
+[Three of Spades.png]
+value = 3
+suit = "S"
+
+[Four of Clubs.png]
+value = 4
+suit = "C"
+[Four of Diamonds.png]
+value = 4
+suit = "D"
+[Four of Hearts.png]
+value = 4
+suit = "H"
+[Four of Spades.png]
+value = 4
+suit = "S"
+
+[Five of Clubs.png]
+value = 5
+suit = "C"
+[Five of Diamonds.png]
+value = 5
+suit = "D"
+[Five of Hearts.png]
+value = 5
+suit = "H"
+[Five of Spades.png]
+value = 5
+suit = "S"
+
+[Six of Clubs.png]
+value = 6
+suit = "C"
+[Six of Diamonds.png]
+value = 6
+suit = "D"
+[Six of Hearts.png]
+value = 6
+suit = "H"
+[Six of Spades.png]
+value = 6
+suit = "S"
+
+[Seven of Clubs.png]
+value = 7
+suit = "C"
+[Seven of Diamonds.png]
+value = 7
+suit = "D"
+[Seven of Hearts.png]
+value = 7
+suit = "H"
+[Seven of Spades.png]
+value = 7
+suit = "S"
+
+[Eight of Clubs.png]
+value = 8
+suit = "C"
+[Eight of Diamonds.png]
+value = 8
+suit = "D"
+[Eight of Hearts.png]
+value = 8
+suit = "H"
+[Eight of Spades.png]
+value = 8
+suit = "S"
+
+[Nine of Clubs.png]
+value = 9
+suit = "C"
+[Nine of Diamonds.png]
+value = 9
+suit = "D"
+[Nine of Hearts.png]
+value = 9
+suit = "H"
+[Nine of Spades.png]
+value = 9
+suit = "S"
+
+[Ten of Clubs.png]
+value = 10
+suit = "C"
+[Ten of Diamonds.png]
+value = 10
+suit = "D"
+[Ten of Hearts.png]
+value = 10
+suit = "H"
+[Ten of Spades.png]
+value = 10
+suit = "S"
+
+[Jack of Clubs.png]
+value = 11
+suit = "C"
+[Jack of Diamonds.png]
+value = 11
+suit = "D"
+[Jack of Hearts.png]
+value = 11
+suit = "H"
+[Jack of Spades.png]
+value = 11
+suit = "S"
+
+[Queen of Clubs.png]
+value = 12
+suit = "C"
+[Queen of Diamonds.png]
+value = 12
+suit = "D"
+[Queen of Hearts.png]
+value = 12
+suit = "H"
+[Queen of Spades.png]
+value = 12
+suit = "S"
+
+[King of Clubs.png]
+value = 13
+suit = "C"
+[King of Diamonds.png]
+value = 13
+suit = "D"
+[King of Hearts.png]
+value = 13
+suit = "H"
+[King of Spades.png]
+value = 13
+suit = "S"
+
+[Joker*]
+value = 0
+suit = "J"
