Optimised storage space used for chess pieces.
Since the only difference between the white and black pieces was the
albedo colour, the black pieces are now added via the inheriting system.

--- a/assets/TabletopClub/pieces/config.cfg
+++ b/assets/TabletopClub/pieces/config.cfg
@@ -23,6 +23,31 @@ author = "rehcub"
 license = "CC0"
 url = "https://opengameart.org/content/chess-set-1"
 
+; Create black versions of all of the chess pieces.
+[Bishop Black]
+parent = "Bishop White"
+color = "#000000"
+
+[King Black]
+parent = "King White"
+color = "#000000"
+
+[Knight Black]
+parent = "Knight White"
+color = "#000000"
+
+[Pawn Black]
+parent = "Pawn White"
+color = "#000000"
+
+[Queen Black]
+parent = "Queen White"
+color = "#000000"
+
+[Rook Black]
+parent = "Rook White"
+color = "#000000"
+
 [Chess Board.obj]
 
 desc = "An 8x8 Chess board."
