--- a/assets/ColorfulCards/cards/config.cfg
+++ b/assets/ColorfulCards/cards/config.cfg
@@ -1,6 +1,6 @@
 [*]
 
-desc = "Colorful Numbered Cards."
+desc = "Cards for the game 'One'."
 author = "Дмитрий Фомин (Dmitry Fomin)"
 license = "Front: CC0 1.0, Back: CC0 1.0"
 url = "Front: https://commons.wikimedia.org/wiki/File:UNO_cards_deck.svg"
