--- a/assets/ColorfulCards/cards/stacks.cfg
+++ b/assets/ColorfulCards/cards/stacks.cfg
@@ -1,6 +1,6 @@
-[59-Colorful Numbered Card Deck]
+[108-Colorful Numbered Card Deck]
 
-desc = "A deck of colorful numbered cards."
+desc = "A deck of cards for playing the game 'One'."
 
 items = [
     "Red Zero",
@@ -10,9 +10,59 @@ items = [
     "Red Four",
     "Red Five",
     "Red Six",
-    "Red Seven",
-    "Red Eight",
-    "Red Nine",
+    "Red Seven", "Red Eight", "Red Nine",
+    "Red Skip",
+    "Red Swap",
+    "Red Draw Two",
+    "Blue Zero",
+    "Blue One",
+    "Blue Two",
+    "Blue Three",
+    "Blue Four",
+    "Blue Five",
+    "Blue Six",
+    "Blue Seven",
+    "Blue Eight",
+    "Blue Nine",
+    "Blue Skip",
+    "Blue Swap",
+    "Blue Draw Two",
+    "Yellow Zero",
+    "Yellow One",
+    "Yellow Two",
+    "Yellow Three",
+    "Yellow Four",
+    "Yellow Five",
+    "Yellow Six",
+    "Yellow Seven",
+    "Yellow Eight",
+    "Yellow Nine",
+    "Yellow Skip",
+    "Yellow Swap",
+    "Yellow Draw Two",
+    "Green Zero",
+    "Green One",
+    "Green Two",
+    "Green Three",
+    "Green Four",
+    "Green Five",
+    "Green Six",
+    "Green Seven",
+    "Green Eight",
+    "Green Nine",
+    "Green Skip",
+    "Green Swap",
+    "Green Draw Two",
+    "Wild Card",
+    "Wild Draw Four",
+    "Red Zero",
+    "Red One",
+    "Red Two",
+    "Red Three",
+    "Red Four",
+    "Red Five",
+    "Red Six",
+    "Red Seven", "Red Eight", "Red Nine",
     "Red Skip",
     "Red Swap",
     "Red Draw Two",
@@ -58,8 +108,6 @@ items = [
     "Wild Card",
     "Wild Card",
     "Wild Card",
-    "Wild Card",
-    "Wild Draw Four",
     "Wild Draw Four",
     "Wild Draw Four",
     "Wild Draw Four"
