Changed the text on blue die to be more readable.
This means that blue die now have their own separate texture and glTF
file, since it can no longer rely on the 'color' property.

This commit closes #203.

--- a/assets/TabletopClub/dice/d10/config.cfg
+++ b/assets/TabletopClub/dice/d10/config.cfg
@@ -45,6 +45,12 @@ modified_by = "Benjamin 'drwhut' Beddows"
 [d10 (Percent) (White).gltf]
 modified_by = "Benjamin 'drwhut' Beddows"
 
+[d10 (Blue).gltf]
+modified_by = "Benjamin 'drwhut' Beddows"
+
+[d10 (Percent) (Blue).gltf]
+modified_by = "Benjamin 'drwhut' Beddows"
+
 [d10 (Red)]
 parent = "d10 (White)"
 color = "#ff3838"
@@ -64,10 +70,6 @@ color = "#1bf81a"
 [d10 (Cyan)]
 parent = "d10 (White)"
 color = "#27f8eb"
-
-[d10 (Blue)]
-parent = "d10 (White)"
-color = "#3e38ff"
 
 [d10 (Purple)]
 parent = "d10 (White)"
@@ -100,10 +102,6 @@ color = "#1bf81a"
 [d10 (Percent) (Cyan)]
 parent = "d10 (Percent) (White)"
 color = "#27f8eb"
-
-[d10 (Percent) (Blue)]
-parent = "d10 (Percent) (White)"
-color = "#3e38ff"
 
 [d10 (Percent) (Purple)]
 parent = "d10 (Percent) (White)"
