--- a/assets/TabletopClub/dice/d12/config.cfg
+++ b/assets/TabletopClub/dice/d12/config.cfg
@@ -29,6 +29,9 @@ face_values = {
 [d12 (White).gltf]
 modified_by = "Benjamin 'drwhut' Beddows"
 
+[d12 (Blue).gltf]
+modified_by = "Benjamin 'drwhut' Beddows"
+
 [d12 (Red)]
 parent = "d12 (White)"
 color = "#ff3838"
@@ -48,10 +51,6 @@ color = "#1bf81a"
 [d12 (Cyan)]
 parent = "d12 (White)"
 color = "#27f8eb"
-
-[d12 (Blue)]
-parent = "d12 (White)"
-color = "#3e38ff"
 
 [d12 (Purple)]
 parent = "d12 (White)"
