--- a/assets/TabletopClub/dice/d20/config.cfg
+++ b/assets/TabletopClub/dice/d20/config.cfg
@@ -37,6 +37,9 @@ face_values = {
 [d20 (White).gltf]
 modified_by = "Benjamin 'drwhut' Beddows"
 
+[d20 (Blue).gltf]
+modified_by = "Benjamin 'drwhut' Beddows"
+
 [d20 (Red)]
 parent = "d20 (White)"
 color = "#ff3838"
@@ -56,10 +59,6 @@ color = "#1bf81a"
 [d20 (Cyan)]
 parent = "d20 (White)"
 color = "#27f8eb"
-
-[d20 (Blue)]
-parent = "d20 (White)"
-color = "#3e38ff"
 
 [d20 (Purple)]
 parent = "d20 (White)"
