--- a/assets/TabletopClub/dice/d4/config.cfg
+++ b/assets/TabletopClub/dice/d4/config.cfg
@@ -21,6 +21,9 @@ face_values = {
 [d4 (White).gltf]
 modified_by = "Benjamin 'drwhut' Beddows"
 
+[d4 (Blue).gltf]
+modified_by = "Benjamin 'drwhut' Beddows"
+
 [d4 (Red)]
 parent = "d4 (White)"
 color = "#ff3838"
@@ -40,10 +43,6 @@ color = "#1bf81a"
 [d4 (Cyan)]
 parent = "d4 (White)"
 color = "#27f8eb"
-
-[d4 (Blue)]
-parent = "d4 (White)"
-color = "#3e38ff"
 
 [d4 (Purple)]
 parent = "d4 (White)"
