--- a/assets/TabletopClub/dice/d8/config.cfg
+++ b/assets/TabletopClub/dice/d8/config.cfg
@@ -25,6 +25,9 @@ face_values = {
 [d8 (White).gltf]
 modified_by = "Benjamin 'drwhut' Beddows"
 
+[d8 (Blue).gltf]
+modified_by = "Benjamin 'drwhut' Beddows"
+
 [d8 (Red)]
 parent = "d8 (White)"
 color = "#ff3838"
@@ -44,10 +47,6 @@ color = "#1bf81a"
 [d8 (Cyan)]
 parent = "d8 (White)"
 color = "#27f8eb"
-
-[d8 (Blue)]
-parent = "d8 (White)"
-color = "#3e38ff"
 
 [d8 (Purple)]
 parent = "d8 (White)"
