Changed scale for cards to Vector2 Cards used to have a Vector3 for the scale property. However, a card is scaled to 0.01 thickness by default. Increasing the thickness of cards leads to a weird collider behavior. A card is thin and if an object is thicker it should be of a different type (e.g. token). To reflect that the thickness of cards can not be changed and for easier configuration the scale was changed to Vector2.

--- a/assets/TabletopClub/cards/config.cfg
+++ b/assets/TabletopClub/cards/config.cfg
@@ -12,7 +12,7 @@ mass = 1.8
 
 ; A standard poker playing card is 2.5 inches (= 6.35 cm) wide by 3.5 inches
 ; tall (= 8.89 cm)
-scale = Vector3(6.35, 1, 8.89)
+scale = Vector2(6.35, 8.89)
 
 back_face = "Back.png"
 
