Can now configure centre-of-mass adjustment for 3D models.
This is done using the new 'com_adjust' property, which can take
one of three values: "off", "volume" (default, same functionality
as before), or "geometry".

This also solves the issue found in #142, in which d4 die would
bounce off of the table and settle on the wrong value when their
value was being set.

This commit closes #208.

--- a/assets/TabletopClub/dice/d4/config.cfg
+++ b/assets/TabletopClub/dice/d4/config.cfg
@@ -18,6 +18,9 @@ face_values = {
     4: Vector2(-55.0, -125.0)
 }
 
+; Make sure the centre-of-mass is in the exact middle of the die.
+com_adjust = "geometry"
+
 [d4 (White).gltf]
 modified_by = "Benjamin 'drwhut' Beddows"
 
